# linux_mstar_3.18

./: .gitignore  KL318.xls  Makefile  backup.config  config  config_k6lite_SMP_arm_supernova_emmc_nand  config_k6lite_SMP_arm_supernova_emmc_nand_nvr_compressed  gen_cl.sh  genlink.sh  genlink_mstar3party.sh  get_last_commit.pl  gitInformation.txt  kernel_prepare_release.sh  kernel_prepare_release2.sh  mkrootfs-arm.sh  mkrootfs-arm64.sh  mpatch.config  mpatch_Kconfig  mpatch_gen.sh  nvr_ms620q_backup_config  nvr_msr620q_config  nvr_msr620q_config_k6l_nor  nvr_msr620q_config_k6l_nor_ForHB  nvr_msr620q_config_k6l_nor_debug  nvr_msr620q_config_nand  nvr_msr620q_config_nand_glibc  nvr_msr620q_config_nand_glibc_i2_dev  nvr_msr620q_config_nand_glibc_i2_dev_debug  nvr_msr620q_config_nand_uclibc_i2_dev  nvr_msr630_config_nand_glibc_k6_dev  nvr_msr630_config_nor_uclibc_k6_dev  nvr_msr630_config_nor_uclibc_k6_dev_debug  p4_changelist.h  supernova.config
arch/: Kconfig  Kconfig.kdebug
arch/arm/: Kconfig  Kconfig.debug  Kconfig_no_kdebug  Makefile
arch/arm/arm-boards/: Kconfig
arch/arm/boot/: Makefile  [[k  (+4 more)
arch/arm64/: Kconfig  Kconfig.debug  Kconfig_no_kdebug  Makefile
arch/mips/: Kconfig  Kconfig_kdrv  Makefile
block/: genhd.c  partition-generic.c
block/partitions/: Kconfig  check.c  emmc.c  emmc.h
boot-wrapper-aarch64.git/: Makefile.am  boot.S  common.S  configure.ac  esl_v8.dtb  gic-v3.S  mmu.S  model.lds.S  ns.S  psci.S  spin.S
drivers/: Kconfig  Makefile
drivers/ata/: Makefile  ahci.c  ahci.h  ahci_platform.c  libahci.c  libahci_platform.c  libata-core.c  libata-eh.c
drivers/base/: Kconfig  Makefile  dma-contiguous.c  firmware_class.c  platform.c
drivers/clocksource/: Makefile  arm_arch_timer.c
drivers/cpufreq/: Makefile  cpufreq.c  cpufreq_governor.c  cpufreq_governor.h  cpufreq_interactive.c  cpufreq_ondemand.c  cpufreq_stats.c
drivers/cpuidle/: Kconfig  Makefile  cpuidle-mstar.c
drivers/hid/: hidraw.c
drivers/input/: Makefile  input.c
drivers/irqchip/: Makefile  irq-gic.c
drivers/misc/: Kconfig  Makefile  rt-regmap.c  uid_cputime.c
drivers/mstar/: Kconfig  Makefile
drivers/mstar2/: Kconfig-Kernel  Makefile
drivers/mtd/: cmdlinepart.c  mtdblock.c  mtdchar.c  mtdpart.c
drivers/of/: fdt.c
drivers/oprofile/: cpu_buffer.c  oprof.c  oprof.h  timer_int.c
drivers/pci/: pci-sysfs.c  remove.c  setup-bus.c
drivers/power/: rt-charger.c
drivers/rtc/: Makefile  rtc-mstar.c
drivers/scsi/: scsi_devinfo.c  scsi_scan.c  sd.c  sd.h
drivers/smaf/: Kconfig  smaf-cma.c  smaf-core.c  smaf-pa.c  smaf.h
drivers/tty/: n_tty.c  tty_io.c  tty_ldisc.c  tty_ldsem.c
drivers/usb/: Kconfig  Makefile
fs/: Makefile  binfmt_elf.c  block_dev.c  buffer.c  coredump.c  dcache.c  fs-writeback.c  inode.c  ioctl.c
fs/cifs/: cifsglob.h
fs/ext4/: inode.c  page-io.c  super.c
fs/fat/: Kconfig  cache.c  dir.c  fat.h  fatent.c  inode.c
fs/fat_pvr/: cache.c  dir.c  fat.h  fatent.c  file.c  inode.c  misc.c
fs/jbd/: transaction.c
fs/jbd2/: transaction.c
fs/ntfs/: aops.c  attrib.c  dir.c  super.c  volume.h
fs/proc/: array.c  base.c  meminfo.c  task_mmu.c
include/asm-generic/: pci-dma-compat.h  vmlinux.lds.h
include/linux/: ahci_platform.h  autoconf.h  bitops.h  clkm.h  compaction.h  compiler-gcc.h  compiler-gcc4.h  cpufreq.h  crc32.h  dma-contiguous.h  fs.h  gfp.h  hidraw.h  init_task.h  interrupt.h  irq.h  irqflags.h  kasan.h  kthread.h  libata.h  math64.h  mm.h  mm_types.h  mmzone.h  module.h  page-flags.h  printk.h  release_version.h  sched.h  semaphore.h  skbuff.h  slub_def.h  suspend.h  tty.h  tty_ldisc.h  types.h  usb.h  vmalloc.h
include/media/: rc-map.h
include/mstar/: mpatch_macro.h
include/net/: ip_fib.h
include/trace/: ftrace.h
include/uapi/: Kbuild
init/: calibrate.c  main.c  version.c
kernel/: Makefile  Makefile_no_kdebug  compat.c  cpu.c  exit.c  fork.c  futex.c  hrtimer-patch.c  hrtimer.c  kthread.c  module.c  pid.c  printk.c  rcutree.c  rcutree_plugin.h  resource.c  semaphore.c  signal.c  smp.c  sys.c  sysctl.c  timer.c
kernel/irq/: Makefile  irqdomain.c  manage.c  proc.c
kernel/kdebugd/: kdbg-core.c  kdbg-func.c  sec_cpuusage.c  sec_memusage.c
kernel/power/: Kconfig  Makefile  hibernate.c  main.c  power.h  process.c  snapshot.c  suspend.c
kernel/sched/: core.c
kernel/time/: alarmtimer.c  sched_clock.c  timekeeping.c
kernel/trace/: ftrace.c  trace.c  trace.h  trace_clock.c  trace_events.c  trace_functions_graph.c  trace_irqsoff.c  trace_sched_switch.c  trace_stack.c
lib/: Kconfig.debug  Kconfig.kasan  Makefile  crc32.c  div64.c  genalloc.c  swiotlb.c
mm/: Kconfig  Makefile  cma.c  compaction.c  internal.h  kmemleak.c  ksm.c  memblock.c  memory.c  mempool.c  migrate.c  mlock.c  mmap.c  page-writeback.c  page_alloc.c  page_isolation.c  pagewalk.c  readahead.c  rmap.c  slab.h  slub.c  util.c  vmalloc.c  vmscan.c
mm/kasan/: kasan.c  kasan.h  report.c
mstar2/: Kconfig-Board  Kconfig-MMap  get_last_commit.pl
mstar2/cam_os_wrapper/: Makefile
mstar2/include/: mdrv_cma_pool_io.h  mdrv_gflip_io.h  mdrv_gflip_ve_io.h  mdrv_gflip_ve_st.h  mdrv_iic.h  mdrv_iomap_io.h  mdrv_iomap_st.h  mdrv_ipa_pool.h  mdrv_ir_io.h  mdrv_ldm_io.h  mdrv_mbx_io.h  mdrv_mbx_st.h  mdrv_mpif_st.h  mdrv_mpool_st.h  mdrv_pm.h  mdrv_pm_io.h  mdrv_system.h  mdrv_system_io.h  mdrv_types.h  mdrv_xc_io.h  mst_devid.h
mstar2/msys/: ms_msys.c
mstar3party/: Makefile
mstar3party/tuner/: Makefile  mdrv_tuner.h  mdrv_tuner_datatype.h
net/: Kconfig
net/core/: datagram.c  dev.c  skbuff.c  sock.c
net/ipv4/: ip_output.c  ping.c  sysfs_net_ipv4.c  tcp_input.c  tcp_ipv4.c  udp.c
net/ipv6/: ping.c  tcp_ipv6.c  udp.c
net/netfilter/: nf_conntrack_core.c  nf_conntrack_proto_tcp.c
net/wireless/: Kconfig  wext-core.c
net/xfrm/: xfrm_output.c
samples/: Makefile
samples/mhw_watchpoint/: Makefile  mdata_watchpoint.c
scripts/: Makefile.kasan  Makefile.lib  bin2c  kallsyms  mkcompile_h  mkuboot.sh  pnmtologo  sortextable
scripts/basic/: fixdep
scripts/dtc/: dtc
scripts/kconfig/: conf  mconf
scripts/mod/: modpost
sound/usb/: mixer.c
(+3868 files in other folders)
